--- a/rockwell-automation-simulator/src/styles/AdminGView.module.css
+++ b/rockwell-automation-simulator/src/styles/AdminGView.module.css
@@ -1,8 +1,8 @@
 /* styles/AdminGView.module.css */
 .section {
   padding: 20px;
-  height: 100%;
-  background: linear-gradient(to bottom, #ffffff, #fa676795);
+  height: 100vh;
+  background-color: black;
 }
 
 .header {
@@ -12,6 +12,7 @@
 .header h1 {
   font-size: 2em;
   margin: 0;
+  color: white;
 }
 
 .header p {
@@ -42,6 +43,12 @@
   background-position: right;
   background-size: 80%;
   backdrop-filter: blur(100px);
+
+
+  border: 3px solid #FF0000;
+  box-shadow: 0 0 15px 0 #ff0000;
+  transition: 0.5s;
+  background-color: #1E1E1E;
 }
 
 .welcomeText {
@@ -78,12 +85,18 @@
 .map {
   grid-column: 2 / 3;
   grid-row: 1 / 3;
-  background: #333;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
   border-radius: 25px;
+  background-image: url('/Map.png');
+  background-size: cover;
+  border-radius: 25px;
+  border: 3px solid #FF0000;
+  box-shadow: 0 0 15px 0 #ff0000;
+  transition: 0.5s;
+  background-color: #1E1E1E;
 }
 
 .stats {
@@ -100,10 +113,13 @@
   padding: 20px;
   color: #fff;
   height: 5vh;
-  border-radius: 15px;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(-145deg, #FF8A65, #FFB74D);
+  border-radius: 25px;
+  border: 3px solid #FF0000;
+  box-shadow: 0 0 15px 0 #ff0000;
+  transition: 0.5s;
+  background-color: #1E1E1E;
 }
 
 .statCard h3 {
@@ -132,25 +148,75 @@
   grid-row: 3 / 4;
   display: flex;
   gap: 20px;
+  height: fit-content;
 }
 
 .satisfaction {
-  background: #FFB74D;
   flex: 1;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  border-radius: 25px;
+  border: 3px solid #FF0000;
+  box-shadow: 0 0 15px 0 #ff0000;
+  transition: 0.5s;
+  height: 45vh;
+}
+.satisfaction:hover{
+  transform: scale(1.05);
+  box-shadow: 0 0 25px 0 #ff0000;
+  
+}
+
+.SatisfactionContainer{
+  width: 80%;
+  height: fit-content ;
+  background-color: #555;
+  border-radius: 25px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(145deg, #C42745, #F47C07);
+  
 }
 
 .satisfaction h3 {
-  margin: 0 0 10px 0;
+  font-size: 2em;
+  color: white;
+  line-height: 0.1;
 }
 
+.SatisfactionContainer h3{
+  margin: 0;
+  color: #fff;
+  font-size: 25px;
+}
+
+.SatisfactionContainer p{
+
+  color: #fff;
+  font-size: 20px;
+  line-height: 0.5;
+  
+}
+
+.percentage{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+
+
 .services {
-  background: #64B5F6;
+  border-radius: 25px;
+  border: 3px solid #FF0000;
+  box-shadow: 0 0 15px 0 #ff0000;
+  transition: 0.5s;
+  background-color: #1E1E1E;
   flex: 1;
-  padding: 20px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -162,14 +228,27 @@
 
 .chartContainer {
   width: 100%;
-  max-width: 300px; /* Ajusta esto según el tamaño deseado */
+  display: flex;
+  justify-content: center;
+
+}
+
+.chartContainer2 {
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+
 }
 
 .playtime {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
-  background: #BA68C8;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border-radius: 25px;
+  border: 3px solid #FF0000;
+  box-shadow: 0 0 15px 0 #ff0000;
+  transition: 0.5s;
+  background-color: #1E1E1E;
+ 
 }
