--- a/rockwell-automation-simulator/src/styles/logIn.module.css
+++ b/rockwell-automation-simulator/src/styles/logIn.module.css
@@ -1,3 +1,112 @@
+
+.body {
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: #f8f8f8;
+  }
+  
+  .textContainer {
+    display: flex;
+    width: 900px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+  
+  .formContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    width: 60%;
+  }
+  
+  .imageContainer {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .logo {
+    width: 150px;
+  }
+  
+  .form {
+    width: 100%;
+  }
+  
+  .title {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .text {
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 20px;
+  }
+  
+  .input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 15px;
+  }
+  
+  .errorMessage {
+    color: red;
+    margin-bottom: 15px;
+  }
+  
+  .logContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .logIn {
+    display: flex;
+    align-items: center;
+  }
+  
+  .rememberMeCheckbox {
+    margin-right: 10px;
+  }
+  
+  .accountButton {
+    background: none;
+    border: none;
+    color: #ff5a5f;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  
+  .logButton {
+    width: 100%;
+    background-color: #ff5a5f;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .logButton:hover {
+    background-color: #e14b4f;
+  }
+  
+  .recImage {
+    background: linear-gradient(45deg, #ff5a5f, #ff7f50);
+    width: 40%;
+    border-radius: 0 10px 10px 0;
+  }
+  
+/*
 .body{
     width: 100%;
     height: 100vh;
@@ -151,3 +260,4 @@
     color: black;
     transform: scale(1.1);
 }
+*/
