--- a/rockwell-automation-simulator/src/styles/UserGameView.module.css
+++ b/rockwell-automation-simulator/src/styles/UserGameView.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
    /* background: linear-gradient(to bottom, #ff7e5f, #feb47b); /* Ajusta los colores según tus necesidades */
-   background-color: black;
+   background-color: white;
  
     height: 105vh; /* Ajusta la altura según tus necesidades */
 }
