--- a/rockwell-automation-simulator/src/styles/index.module.css
+++ b/rockwell-automation-simulator/src/styles/index.module.css
@@ -50,14 +50,15 @@
   border: none;
   background-color: #EB2C2B;
   border-radius: 50px;
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: white;
   font-weight: 500;
   width: fit-content;
-  padding: 10px 20px;
+  padding: 6px 10px;
   transition: 0.5s;
   width: 30%;
   margin-top: 2vh;
+  font-family: poppins;
  }
 
  .button:hover{
