--- a/rockwell-automation-simulator/src/pages/signIn.module.css
+++ b/rockwell-automation-simulator/src/pages/signIn.module.css
@@ -10,6 +10,29 @@
   font-family: poppins;
 }
 
+.buttonArrow{
+ margin-bottom: 0px;
+ height: 6vh;
+  transition: 0.4s;
+  margin-top: 0px;
+  display: flex;
+  background-color: white;
+  border: none;
+  align-self: flex-start;
+  margin-left: 10%;
+}
+
+.buttonArrow img{
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  background-color: none;
+}
+
+.buttonArrow:hover{
+  transform: scale(1.1);
+}
+
 .formContainer {
   display: flex;
   width: 100%;
@@ -62,6 +85,7 @@
   font-size: 2em;
   margin-bottom: 0;
   font-weight: 400;
+  margin-top: 0px;
 }
 
 .description {
@@ -131,7 +155,8 @@
   scale: 1.05;
 }
 .InputTitle{
-  line-height: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
   font-size: 1em;
   font-family: Poppins;
   font-weight: 500;
