--- a/rockwell-automation-simulator/src/pages/global.css
+++ b/rockwell-automation-simulator/src/pages/global.css
@@ -2,9 +2,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
   margin: 0;
   line-height: normal;
+  font-family: var(--font-barlow);
 }
 :root {
   /* fonts */
@@ -12,6 +16,7 @@ body {
   --font-lato: Lato;
   --font-inter: Inter;
   --font-dm-sans: "DM Sans";
+  --font-barlow: Barlow;
 
   /* font sizes */
   --font-size-11xl: 30px;
