--- a/rockwell-automation-simulator/src/styles/AdminGView.module.css
+++ b/rockwell-automation-simulator/src/styles/AdminGView.module.css
@@ -159,6 +159,8 @@
   transition: 0.5s;
   height: 45vh;
   color: black;
+  gap: 5px;
+  
 }
 .satisfaction:hover{
   transform: scale(1.05);
@@ -232,13 +234,13 @@
 
 .chartContainer2 {
   width: 100%;
-  height: 40vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;  
-  background-color: white;
-  border-radius: 25px;
-
+  
+  
+  border-radius: 25px; 
 }
 
 .playtime {
@@ -249,29 +251,33 @@
   box-shadow: 0 0 5px 0 #ff0000;
   transition: 0.5s;
   background-color: white;
+
  
 }
 .SatisfactionContainer2{
   width: 80%;
   padding: 10px;
   height: fit-content ;
-  background-color: #555;
   border-radius: 15px;
   align-items: center;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   background: linear-gradient(145deg, #C42745, #F47C07);
-  gap: 5px;
-  
+}
+
+.percentage2{
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
-
 .SatisfactionContainer2 h3{
-  margin-top: 0px;
+  margin-top: 10px;
   color: #fff;
-  font-size: 15px;
-  margin-bottom: 0px;
+  font-size: 25px;
+  margin-bottom: 10px;
 }
 
 
