--- a/rockwell-automation-simulator/src/styles/logIn.module.css
+++ b/rockwell-automation-simulator/src/styles/logIn.module.css
@@ -1,11 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 
 .body {
     display: flex;
-    
-
   }
   
   .textContainer {
@@ -38,25 +35,26 @@
   
   .form {
     width: 60%;
-   
+  
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
   .title {
-    font-size: 2.4em;
-    margin-bottom: 10px;
-    font-family: Poppins;
+    font-size: 3em;
+    margin-bottom: 0px;
     font-weight: 400;
   }
   
   .text {
-    font-size: 1em;
+    font-size: 1.4em;
     color: #000000;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
    font-weight: 400;
-    font-family: poppins;
+   margin-top: 5px;
+
+
   }
   
   .input {
@@ -69,8 +67,8 @@
 
   .InputTitle{
     line-height: 0;
-    font-size: 1em;
-    font-family: Poppins;
+    font-size: 1.5em;
+
     font-weight: 500;
     width: 68%;
   }
@@ -96,22 +94,19 @@
 
   .logIn h1{
     font-size: 0.8em;
-    font-family: Poppins;
+
     font-weight: 500;
     margin-right: 10px;
   }
   
-  .rememberMeCheckbox {
-    margin-right: 10px;
-  }
-  
+
   .accountButton {
    background: none;
     border: none;
     color: #ff5a5f;
     cursor: pointer;
-    font-size: 14px;
-    font-family: Poppins;
+    font-size: 18px;
+
     font-weight: 500;
   }
   
@@ -123,7 +118,7 @@
     border: none;
     border-radius: 25px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     margin-top: 2vh;
     
   }
