--- a/rockwell-automation-simulator/src/styles/AdminGView.module.css
+++ b/rockwell-automation-simulator/src/styles/AdminGView.module.css
@@ -288,3 +288,11 @@
   
   
 }
+
+.Loader{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
