--- a/rockwell-automation-simulator/src/styles/AdminUView.module.css
+++ b/rockwell-automation-simulator/src/styles/AdminUView.module.css
@@ -5,6 +5,13 @@
     
   }
   
+  .Loader{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .header {
     margin-bottom: 20px;
   }
